syntax = "proto3";

package pb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "pb/header.proto";
import "pb/transaction.proto";



message MsgBlock {
	BlockHeader     header                 = 1;
	repeated MsgTx  transactions           = 2;
}

